--- a/css/main.css
+++ b/css/main.css
@@ -1020,11 +1020,11 @@ html {
 
 .copi {
   background-color: #535353;
-  height: 10vh;
+  height: 20vh;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   padding-right: 2rem;
 }
 
@@ -1053,26 +1053,8 @@ html {
   font-size: 1rem;
 }
 
-.copi .diego {
-  position: relative;
-  margin: .5rem;
-  font-family: 'Gamja Flower', cursive;
-  font-size: 1.2rem;
-  font-weight: lighter;
-  color: black;
-  text-decoration: none;
-  color: white;
-}
-
-.copi .o {
-  color: #bd4d0c;
-}
-
-.copi .planet {
-  background-image: linear-gradient(to bottom, #d2ff0b, #1659d4);
-  position: absolute;
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: 40%;
+.copi .pizza {
+  width: 8rem;
+  margin-left: 2rem;
 }
 /*# sourceMappingURL=main.css.map */
